--- a/studyTime/index.html
+++ b/studyTime/index.html
@@ -48,7 +48,7 @@
         <div class="bottom" onclick="changeText()">你要悄悄拔尖，然后惊艳所有人！！</div>
     </div>
     <footer>
-        <span>©2022 By <a href="https://www.leonus.cn/">Leonus</a></span>
+        <!-- <span>©2024</span> -->
     </footer>
 </body>
 
