--- a/studyTime/index.html
+++ b/studyTime/index.html
@@ -13,6 +13,7 @@
     <script src="js/postbirdAlertBox.min.js"></script>
     <script src="js/script.js"></script>
     <script src="js/be-full.js"></script>
+    <link rel="preload" href="https://picsum.photos/1920/1080" as="image">
 </head>
 
 <body>
