--- a/studyTime/index.html
+++ b/studyTime/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
-    <title>学习计时 - 今天你学习了吗？</title>
+    <title>学习计时器</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/postbirdAlertBox.css">
     <link href="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/font-awesome/6.0.0/css/all.min.css" type="text/css" rel="stylesheet" />
